   * Old Fermi Surface plotting tools kvecs_FS.f, bands_FS.f90, in PW/tools/,
     replaced by new code PP/src/fermisurface.f90
   * Reshuffling of FFT-related modules: 
     "gather_*"  and "scatter_*" routines moved from module fft_base 
                                                  to module scatter_mod
   * All FFT-related code moved to FFTxlib/

New in 5.2.1 version:

   * svdW-DF, a proper spin version of vdW-DF (PRL 115, 136402 (2015);
     courtesy of Timo Thonhauser)
   * XSpectra: various improvements, extension to L_23 edges
   * ESM: various improvements, constant-bias (PRL 109, 266101 (2012))
     calculations for both pw.x and neb.x (courtesy of Minoru Otani)

Incompatible changes in 5.2.1 version:

   * "pot" parallelization level, no longer used, removed   
   * Obsolete calls to SCSL and SUNPERF library FFTs removed

Fixed in 5.2.1 version:

   * PW: incorrect calculation of maximum number of plane waves could lead 
     to error exit with hybrid functionals and ultrasoft pseudopotentials
   * PW: cell_dofree = '2Dshape' wasn't working as expected
   * PW: a few do loops included more FFT planes than physical ones in real
     space, leading to inaccuracies in real-space augmentation charge and xdm,
     only if the number of processors nproc_bgrp was not a divisor of nr3
   * XSpectra: v.5.1.2 and 5.2.0 contained a bug in parallelization that could
     lead to incorrect results     
   * TDDFPT: mismatch between actual and expected format of save file
   * Various fixes for compilation on NAG compiler

Incompatible changes in 5.2.0 version:

   * various "gather" and "scatter" routines removes and replaced by two
     interface routines gather_grid, scatter_grid, valid for all FFT grids
     and for both real and complex arrays; realspace_grid_init_custom and
     realspace_grids_init merged into realspace_grid_init, for each grid
   * __STD_F95 preprocessing option removed: all compilers that do not allow